--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -36,6 +36,11 @@ body {
   min-width: 320px;
   min-height: 100vh;
   background: #ffffff;
+  overflow-x: hidden;
+}
+
+html {
+  overflow-x: hidden;
 }
 
 h1 {
